--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.9",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
